--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "express": "^5.0.0",
     "remeda": "^2.20.1",
     "yargs": "^17.7.2",
-    "zod": "^3.24.2",
-    "@types/express": "^5.0.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@figma/rest-api-spec": "^0.24.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.17.0",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
